# lab04dz

./: CMakeLists.txt
.github/workflows/: ci_linux.yml  ci_windows.yml
formatter_ex_lib/: CMakeLists.txt  cmh.txt
formatter_lib/: -Bbuild  cmh.txt
hello_world_application/: .CMakeLists.txt.swp  CMakeLists.txt  cmh.txt
solver_application/: CMakeLists.txt  cmh.txt
solver_lib/: cmh.txt
